namespace WebAPI_Printer.Models
{
    public class FacultyDto
    {
        public int FacultyId { get; set; }
        public string Name { get; set; }
    }
}
