namespace WebAPI_Printer.Models
{
    public class FormatPagesDto
    {
        public string TypeCode { get; set; }
        public int PagesAvailable { get; set; }
    }
}
