namespace WebAPI_Printer.Models
{
    public class UserBalanceDto
    {
        public string Uid { get; set; }
        public string Username { get; set; }
        public decimal Balance { get; set; }
    }
}
